# aws-lambda-langchain-poetry-docker-demo

./: Dockerfile  README.md  aws_deploy.py  cdk.py  lambda_function.py  pyproject.toml
src/: app.py
